--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 
   <body>
 <img src="https://avatars2.githubusercontent.com/u/56706888?v=4">
-
+<ul>
+    <li>Twitch</li>
+    <li>Mixer</li>
+    <li>Steam</li>
+</ul>
+     
   </body>
 
 </html>
